docs: add comprehensive README with architecture, API reference, and ML pipeline details